<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:background="#342949"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/top"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top"
        android:textColor="#CF1A1A"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:id="@+id/image_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp"
        android:layout_toEndOf="@+id/top">
        <ImageView
            android:id="@+id/img"
            android:src="@drawable/cs_son_tung"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/anh"
             />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tenBaiHat"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/image_radius"
        android:text="@string/tenbathat"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tenCaSi"
        android:textColor="#F3E8E8"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/tenBaiHat"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ca_s"
        android:layout_toEndOf="@id/image_radius" />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:src="@drawable/menu_zc"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />
</RelativeLayout>